samples/_failures_safe/1761005921_59dd36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4174c8c9.c: In function ‘main’:
./samples/SAFE/__tmp_4174c8c9.c:159:12: error: missing terminating " character
  159 |     printf(")\
      |            ^~~
./samples/SAFE/__tmp_4174c8c9.c:159:5: error: expected expression at end of input
  159 |     printf(")\
      |     ^~~~~~
./samples/SAFE/__tmp_4174c8c9.c:159:5: error: expected declaration or statement at end of input
